--- a/src/lonos.kernel.api/lonos.kernel.api.csproj
+++ b/src/lonos.kernel.api/lonos.kernel.api.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Structs\USize.cs" />
     <Compile Include="Structs\FileHandle.cs" />
     <Compile Include="Structs\SSize.cs" />
+    <Compile Include="Structs\MemoryRegion.cs" />
     <Compile Include="Structs\Addr.cs" />
     <Compile Include="IKernelApi.cs" />
     <Compile Include="IFile.cs" />
