--- a/src/lonos.native/build
+++ b/src/lonos.native/build
@@ -12,8 +12,8 @@ cp EnableExecutionProtection.o ../../bin/lonos.EnableExecutionProtection.o
 nasm -f bin InterruptReturn.s -o InterruptReturn.o
 cp InterruptReturn.o ../../bin/lonos.InterruptReturn.o
 
-nasm -f bin InterruptReturn2.s -o InterruptReturn2.o
-cp InterruptReturn2.o ../../bin/lonos.InterruptReturn2.o
+nasm -f bin InterruptReturnUser.s -o InterruptReturnUser.o
+cp InterruptReturnUser.o ../../bin/lonos.InterruptReturnUser.o
 
 nasm -f bin LoadTaskRegister.s -o LoadTaskRegister.o
 cp LoadTaskRegister.o ../../bin/lonos.LoadTaskRegister.o
