--- a/src/lonos.kernel.lib/lonos.kernel.lib.csproj
+++ b/src/lonos.kernel.lib/lonos.kernel.lib.csproj
@@ -57,6 +57,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="X86_EFlags.cs" />
     <Compile Include="Elf\ElfHeader.cs" />
     <Compile Include="Elf\ElfSectionHeader.cs" />
     <Compile Include="Elf\ElfSymbol.cs" />
