--- a/src/lonos.test.console/lonos.test.console.csproj
+++ b/src/lonos.test.console/lonos.test.console.csproj
@@ -36,7 +36,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AllocTest.cs" />
-    <Compile Include="..\lonos.kernel.core\buddy-malloc.cs">
+    <Compile Include="..\lonos.kernel.core\Tests\buddy-malloc.cs">
       <Link>buddy-malloc.cs</Link>
     </Compile>
     <Compile Include="alloc2\EmptyClass.cs" />
