--- a/src/lonos.kernel.api/lonos.kernel.api.csproj
+++ b/src/lonos.kernel.api/lonos.kernel.api.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>lonos.kernel</RootNamespace>
+    <RootNamespace>lonos.Kernel</RootNamespace>
     <AssemblyName>lonos.kernel.api</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</ProjectGuid>
