--- a/src/lonos.kernel.lib/lonos.kernel.lib.csproj
+++ b/src/lonos.kernel.lib/lonos.kernel.lib.csproj
@@ -4,7 +4,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>lonos.kernel</RootNamespace>
+    <RootNamespace>lonos.Kernel</RootNamespace>
     <AssemblyName>lonos.kernel.lib</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectGuid>{2D21AF60-8366-430A-9579-1B0CCD31910F}</ProjectGuid>
@@ -64,8 +64,8 @@
     <Compile Include="StringBuffer.cs" />
     <Compile Include="ApiContext.cs" />
     <Compile Include="BufferExtensions.cs" />
-    <Compile Include="Fonts\PSF2Header.cs" />
-    <Compile Include="Fonts\PSF1Header.cs" />
+    <Compile Include="ConsoleFonts\PSF2Header.cs" />
+    <Compile Include="ConsoleFonts\PSF1Header.cs" />
     <Compile Include="KMath.cs" />
     <Compile Include="Elf\ElfHelper.cs" />
     <Compile Include="Boot\BootInfoHeader.cs" />
