Migrated to new Dependency-Style for x64 preparation

--- a/src/lonos.build/lonos.build.csproj
+++ b/src/lonos.build/lonos.build.csproj
@@ -40,7 +40,8 @@
     <NoWarn>162</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>lonos.build.Program</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
