--- a/src/lonos.kernel.loader/lonos.kernel.loader.csproj
+++ b/src/lonos.kernel.loader/lonos.kernel.loader.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>lonos.Kernel.Core</RootNamespace>
     <AssemblyName>lonos.kernel.loader</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -30,7 +30,11 @@
     <NoStdLib>true</NoStdLib>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DummyClass.cs" />
     <Compile Include="LoaderStart.cs" />
     <Compile Include="MultiBoot.cs" />
     <Compile Include="BootMemory.cs" />
