--- a/src/lonos.os.core.x86/lonos.os.core.x86.csproj
+++ b/src/lonos.os.core.x86/lonos.os.core.x86.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <OutputType>Library</OutputType>
-    <RootNamespace>lonos.Kernel</RootNamespace>
-    <AssemblyName>lonos.kernel.unixapi</AssemblyName>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>lonos.os.Core.x86</RootNamespace>
+    <AssemblyName>lonos.os.core.x86</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <ProjectGuid>{1DAF7D31-54DC-4B15-A14E-15206073C579}</ProjectGuid>
+    <ProjectGuid>{90D5E7CD-46B2-4334-A9A9-79C358F8C353}</ProjectGuid>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,14 +39,21 @@
       <Project>{77961864-DB33-4189-804F-D774022C96E2}</Project>
       <Name>Mosa.Runtime</Name>
     </ProjectReference>
-    <ProjectReference Include="..\lonos.kernel.api\lonos.kernel.api.csproj">
-      <Project>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</Project>
-      <Name>lonos.kernel.api</Name>
+    <ProjectReference Include="..\lonos.kernel.config\lonos.kernel.config.csproj">
+      <Project>{317E8C4B-089B-469B-8789-D76EB2F87504}</Project>
+      <Name>lonos.kernel.config</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\lonos.kernel.core.x86\lonos.kernel.core.x86.csproj">
+      <Project>{5d3cba2a-b24f-4335-ace6-87f741e6495c}</Project>
+      <Name>lonos.kernel.core.x86</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\lonos.kernel.core\lonos.kernel.core.csproj">
+      <Project>{a72ed046-de1c-4688-981b-6086c091047f}</Project>
+      <Name>lonos.kernel.core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IUnixKernelApi.cs" />
-    <Compile Include="GFP.cs" />
+    <Compile Include="Start.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
