--- a/src/lonos.os.loader.x86/lonos.os.loader.x86.csproj
+++ b/src/lonos.os.loader.x86/lonos.os.loader.x86.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <OutputType>Library</OutputType>
-    <RootNamespace>lonos.Kernel</RootNamespace>
-    <AssemblyName>lonos.kernel.unixapi</AssemblyName>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>lonos.os.Loader.x86</RootNamespace>
+    <AssemblyName>lonos.os.loader.x86</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <ProjectGuid>{1DAF7D31-54DC-4B15-A14E-15206073C579}</ProjectGuid>
+    <ProjectGuid>{5C919AFE-E5D3-42CD-B996-26ABAEC126DB}</ProjectGuid>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,14 +39,21 @@
       <Project>{77961864-DB33-4189-804F-D774022C96E2}</Project>
       <Name>Mosa.Runtime</Name>
     </ProjectReference>
-    <ProjectReference Include="..\lonos.kernel.api\lonos.kernel.api.csproj">
-      <Project>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</Project>
-      <Name>lonos.kernel.api</Name>
+    <ProjectReference Include="..\lonos.kernel.config\lonos.kernel.config.csproj">
+      <Project>{317E8C4B-089B-469B-8789-D76EB2F87504}</Project>
+      <Name>lonos.kernel.config</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\lonos.kernel.loader.x86\lonos.kernel.loader.x86.csproj">
+      <Project>{5a5ab0fe-d128-4429-a5fc-0498e11240af}</Project>
+      <Name>lonos.kernel.loader.x86</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\lonos.kernel.loader\lonos.kernel.loader.csproj">
+      <Project>{67727c0f-a566-4ce2-96dc-dd27a2e0cb30}</Project>
+      <Name>lonos.kernel.loader</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IUnixKernelApi.cs" />
-    <Compile Include="GFP.cs" />
+    <Compile Include="Start.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
