--- a/src/lonos.primitives/lonos.primitives.csproj
+++ b/src/lonos.primitives/lonos.primitives.csproj
@@ -4,10 +4,10 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
-    <RootNamespace>lonos.Kernel</RootNamespace>
-    <AssemblyName>lonos.kernel.api</AssemblyName>
+    <RootNamespace>lonos</RootNamespace>
+    <AssemblyName>lonos.primitives</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <ProjectGuid>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</ProjectGuid>
+    <ProjectGuid>{3CAC5147-9DE2-4BE5-AC16-E1592C10251B}</ProjectGuid>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,29 +39,19 @@
       <Project>{77961864-DB33-4189-804F-D774022C96E2}</Project>
       <Name>Mosa.Runtime</Name>
     </ProjectReference>
-    <ProjectReference Include="..\lonos.primitives\lonos.primitives.csproj">
-      <Project>{3cac5147-9de2-4be5-ac16-e1592c10251b}</Project>
-      <Name>lonos.primitives</Name>
+    <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Runtime.x86\Mosa.Runtime.x86.csproj">
+      <Project>{A47B7998-4EE8-4AF8-9373-C664FDEDDC65}</Project>
+      <Name>Mosa.Runtime.x86</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\lonos.kernel.config\lonos.kernel.config.csproj">
+      <Project>{317E8C4B-089B-469B-8789-D76EB2F87504}</Project>
+      <Name>lonos.kernel.config</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Structs\NullTerminatedString.cs" />
-    <Compile Include="Structs\USize.cs" />
-    <Compile Include="Structs\FileHandle.cs" />
-    <Compile Include="Structs\SSize.cs" />
-    <Compile Include="Structs\MemoryRegion.cs" />
-    <Compile Include="Structs\Addr.cs" />
-    <Compile Include="IKernelApi.cs" />
-    <Compile Include="IFile.cs" />
-    <Compile Include="IBufferWriter.cs" />
-    <Compile Include="IPageFrameAllocator.cs" />
-    <Compile Include="Structs\Page.cs" />
-    <Compile Include="Structs\Atomic.cs" />
-    <Compile Include="Extensions.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Elf\" />
-    <Folder Include="Fonts\" />
+    <Compile Include="BitHelper.cs" />
+    <Compile Include="BitMask.cs" />
+    <Compile Include="BitMask64.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
