--- a/src/lonos.test.console/lonos.test.console.csproj
+++ b/src/lonos.test.console/lonos.test.console.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -44,10 +44,7 @@
     <Compile Include="alloc4.cs" />
     <Compile Include="alloc4Test.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="alloc2\" />
-    <Folder Include="Alloc3\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\lonos.core.classlib\lonos.core.classlib.csproj">
       <Project>{FA6E1560-C2D5-41BB-9E7C-D54D0F711918}</Project>
@@ -60,6 +57,10 @@
     <ProjectReference Include="..\lonos.kernel.api\lonos.kernel.api.csproj">
       <Project>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</Project>
       <Name>lonos.kernel.api</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\lonos.primitives\lonos.primitives.csproj">
+      <Project>{3cac5147-9de2-4be5-ac16-e1592c10251b}</Project>
+      <Name>lonos.primitives</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
