--- a/src/lonos.kernel.unixapi/lonos.kernel.unixapi.csproj
+++ b/src/lonos.kernel.unixapi/lonos.kernel.unixapi.csproj
@@ -43,6 +43,10 @@
       <Project>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</Project>
       <Name>lonos.kernel.api</Name>
     </ProjectReference>
+    <ProjectReference Include="..\lonos.primitives\lonos.primitives.csproj">
+      <Project>{3cac5147-9de2-4be5-ac16-e1592c10251b}</Project>
+      <Name>lonos.primitives</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IUnixKernelApi.cs" />
