--- a/src/lonos.kernel.lib/lonos.kernel.lib.csproj
+++ b/src/lonos.kernel.lib/lonos.kernel.lib.csproj
@@ -61,6 +61,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PageTable\IPageTable.cs" />
+    <Compile Include="PageTable\PageTableType.cs" />
     <Compile Include="X86_EFlags.cs" />
     <Compile Include="Elf\ElfHeader.cs" />
     <Compile Include="Elf\ElfSectionHeader.cs" />
