--- a/src/lonos.kernel.lib/lonos.kernel.lib.csproj
+++ b/src/lonos.kernel.lib/lonos.kernel.lib.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PageTable\IPageTable.cs" />
+    <Compile Include="PageTable\PageTableExtensions.cs" />
     <Compile Include="PageTable\PageTableType.cs" />
     <Compile Include="X86_EFlags.cs" />
     <Compile Include="Elf\ElfHeader.cs" />
