--- a/src/lonos.core.classlib/lonos.core.classlib.csproj
+++ b/src/lonos.core.classlib/lonos.core.classlib.csproj
@@ -51,6 +51,10 @@
       <Project>{1DAF7D31-54DC-4B15-A14E-15206073C579}</Project>
       <Name>lonos.kernel.unixapi</Name>
     </ProjectReference>
+    <ProjectReference Include="..\lonos.primitives\lonos.primitives.csproj">
+      <Project>{32985313-c07a-41ef-b68b-597496a9106e}</Project>
+      <Name>lonos.primitives</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
