--- a/src/app.hellokernel/app.hellokernel.csproj
+++ b/src/app.hellokernel/app.hellokernel.csproj
@@ -7,6 +7,7 @@
     <RootNamespace>app.HelloKernel</RootNamespace>
     <AssemblyName>app.hellokernel</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <ProjectGuid>{E97F2133-634F-488C-933A-B78D6A1F0B69}</ProjectGuid>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -46,7 +47,7 @@
       <Name>Mosa.Runtime</Name>
     </ProjectReference>
     <ProjectReference Include="..\lonos.primitives\lonos.primitives.csproj">
-      <Project>{32985313-c07a-41ef-b68b-597496a9106e}</Project>
+      <Project>{814ad96b-e6b2-465d-8c99-4a8e7fbd2541}</Project>
       <Name>lonos.primitives</Name>
     </ProjectReference>
   </ItemGroup>
