--- a/src/lonos.primitives/lonos.primitives.csproj
+++ b/src/lonos.primitives/lonos.primitives.csproj
@@ -53,6 +53,7 @@
     <Compile Include="BitHelper.cs" />
     <Compile Include="BitMask.cs" />
     <Compile Include="BitMask64.cs" />
+    <Compile Include="BitsMask.cs" />
     <Compile Include="NullTerminatedString.cs" />
     <Compile Include="SSize.cs" />
     <Compile Include="USize.cs" />
