--- a/src/lonos.service.basic/lonos.service.basic.csproj
+++ b/src/lonos.service.basic/lonos.service.basic.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <OutputType>Library</OutputType>
-    <RootNamespace>lonos.Kernel</RootNamespace>
-    <AssemblyName>lonos.kernel.api</AssemblyName>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>lonos.Service.Basic</RootNamespace>
+    <AssemblyName>lonos.service.basic</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <ProjectGuid>{ED52E867-98F0-4FBF-AB06-4812AE5FFB43}</ProjectGuid>
+    <ProjectGuid>{481DD672-7A67-43EB-B18C-88F4EA97CDF0}</ProjectGuid>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,36 +30,38 @@
     <NoStdLib>true</NoStdLib>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Korlib\Mosa.Korlib.csproj">
       <Project>{631BC4F3-E2D8-4319-814C-13904CAA17CE}</Project>
       <Name>Mosa.Korlib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Runtime.x86\Mosa.Runtime.x86.csproj">
+      <Project>{a47b7998-4ee8-4af8-9373-c664fdeddc65}</Project>
+      <Name>Mosa.Runtime.x86</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\external\MOSA-Project\Source\Mosa.Runtime\Mosa.Runtime.csproj">
       <Project>{77961864-DB33-4189-804F-D774022C96E2}</Project>
       <Name>Mosa.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\lonos.kernel.api\lonos.kernel.api.csproj">
+      <Project>{ed52e867-98f0-4fbf-ab06-4812ae5ffb43}</Project>
+      <Name>lonos.kernel.api</Name>
     </ProjectReference>
     <ProjectReference Include="..\lonos.primitives\lonos.primitives.csproj">
       <Project>{d61ba40b-253d-445b-a6ac-1b080aac9b80}</Project>
       <Name>lonos.primitives</Name>
     </ProjectReference>
+    <ProjectReference Include="..\lonos.runtime\lonos.runtime.csproj">
+      <Project>{4d9c0633-1433-4a92-a148-80e8e91155fd}</Project>
+      <Name>lonos.runtime</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Compile Include="KnownSysCallCommand.cs" />
-    <Compile Include="Structs\FileHandle.cs" />
-    <Compile Include="Structs\MemoryRegion.cs" />
-    <Compile Include="IKernelApi.cs" />
-    <Compile Include="IFile.cs" />
-    <Compile Include="IBufferWriter.cs" />
-    <Compile Include="IPageFrameAllocator.cs" />
-    <Compile Include="Structs\Page.cs" />
-    <Compile Include="Structs\Atomic.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="SystemMessage.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Elf\" />
-    <Folder Include="Fonts\" />
+    <Compile Include="Program.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
