--- a/src/lonos.test.console/lonos.test.console.csproj
+++ b/src/lonos.test.console/lonos.test.console.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>lonos.test.console</RootNamespace>
     <AssemblyName>lonos.test.console</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <CodeAnalysisRuleSet>..\ressources\codeanalysis\default.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
