--- a/src/lonos.kernel.core/lonos.kernel.core.csproj
+++ b/src/lonos.kernel.core/lonos.kernel.core.csproj
@@ -32,8 +32,13 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Devices\DeviceManager.cs" />
+    <Compile Include="Devices\TerminalDevice.cs" />
     <Compile Include="DummyClass.cs" />
+    <Compile Include="Interrupts\IDT.cs" />
+    <Compile Include="Interrupts\IDTTaskStack.cs" />
     <Compile Include="Interrupts\InterruptControlBlock.cs" />
+    <Compile Include="MemoryManagement\PageFrameManager.cs" />
     <Compile Include="MemoryManagement\PageTableExtensions.cs" />
     <Compile Include="Processes\Process.cs" />
     <Compile Include="Processes\ProcessCreateOptions.cs" />
@@ -50,7 +55,6 @@
     <Compile Include="MemoryManagement\Memory.cs" />
     <Compile Include="Elf\KernelElf.cs" />
     <Compile Include="MemoryManagement\ManagedMemoy.cs" />
-    <Compile Include="Interrupts\IDTMosa.cs" />
     <Compile Include="Interrupts\IDTStack.cs" />
     <Compile Include="Diagnostics\Panic.cs" />
     <Compile Include="Interrupts\PIC.cs" />
@@ -63,8 +67,6 @@
     <Compile Include="Devices\SerialDevice.cs" />
     <Compile Include="Devices\NullDevice.cs" />
     <Compile Include="Diagnostics\KernelMessageDevice.cs" />
-    <Compile Include="Devices\Terminal.cs" />
-    <Compile Include="Devices\Devices.cs" />
     <Compile Include="Api\ApiHost.cs" />
     <Compile Include="Devices\Console\ConsoleDevice.cs" />
     <Compile Include="Devices\FrameBuffer.cs" />
@@ -122,10 +124,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-   <PackageReference Include="StyleCop.Analyzers">
+    <PackageReference Include="StyleCop.Analyzers">
       <Version>1.1.118</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
-    </PackageReference>  </ItemGroup>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
